<resources>
    <string name="app_name">Practice Sessions</string>
    <string name="example_text_date">Today</string>
    <string name="example_text_session_name">This is a sessions name</string>
    <string name="practiced_on_label_text">Practiced on:</string>
    <string name="no_connection_error_text">No Network available! Establish a connection and retry</string>
    <string name="retry_bt_text">Retry</string>
    <string name="default_session_name_value">Introductory Session</string>
    <string name="session_name_example">Session Name</string>
    <string name="example_text_exercise_id">Exercise Id</string>
    <string name="exercise_id_label">Id:</string>
    <string name="exercise_name_example">Exercise Name</string>
    <string name="detected_bpm_text">Bpm: </string>
    <string name="top_text">TOP</string>
    <string name="example_bpm">100</string>
    <string name="performance_label">Perf: </string>
    <string name="placeholder_img_content_description">placeholder for an exercise image</string>
    <string name="contentDescription_Exercise_Image">Image repesenting a sepecific exercise</string>
</resources>
