<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="at.stefanirndorfer.practicesessions.session.SessionDetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            tyle="@style/Base.TextAppearance.AppCompat.Large"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginLeft="@dimen/margin_left"
            android:text="@{viewModel.mSessionName}"
            tools:text="@string/session_name_example" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginLeft="@dimen/margin_left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/practiced_on_label_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/practiced_on_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginLeft="@dimen/margin_left"
                android:text="@{viewModel.mPracticedOn}"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:text="@string/example_text_date" />

        </LinearLayout>



        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_exercise_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:adjustViewBounds="true"
            android:gravity="center"
            android:horizontalSpacing="8dp"
            android:padding="16dp" />

    </LinearLayout>

</layout>